--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.6.0",
     "@medusajs/medusa": "^1.20.7",
     "@tanstack/react-query": "4.22",
     "axios": "^1.7.2",
@@ -17,7 +18,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.0",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
