--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@medusajs/medusa": "^1.20.7",
     "@tanstack/react-query": "4.22",
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "medusa-react": "^9.0.17",
     "next": "14.2.4",
     "query-string": "^9.0.0",
