--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,10 @@
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "medusa-react": "^9.0.17",
-    "next": "14.2.4",
+    "next": "^15.0.0-canary.43",
     "query-string": "^9.0.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0-rc-c21bcd627b-20240624",
+    "react-dom": "^19.0.0-rc-c21bcd627b-20240624",
     "react-hook-form": "^7.52.0",
     "sass": "^1.77.6",
     "zod": "^3.23.8"
