--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,15 +12,18 @@
     "@hookform/resolvers": "^3.6.0",
     "@medusajs/medusa": "^1.20.7",
     "@tanstack/react-query": "4.22",
+    "autoprefixer": "^10.4.19",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "medusa-react": "^9.0.17",
     "next": "^15.0.0-canary.43",
+    "postcss": "^8.4.38",
     "query-string": "^9.0.0",
     "react": "^19.0.0-rc-c21bcd627b-20240624",
     "react-dom": "^19.0.0-rc-c21bcd627b-20240624",
     "react-hook-form": "^7.52.0",
     "sass": "^1.77.6",
+    "tailwindcss": "^3.4.4",
     "zod": "^3.23.8"
   },
   "devDependencies": {
